horizontal scroll bar fixed on mobile

--- a/sytle.css
+++ b/sytle.css
@@ -201,14 +201,4 @@ a
     {
         visibility: hidden;
     }
-    .shooting-star
-    {
-        width: 400px;
-        height: 700px;
-    }
-    .star
-    {
-        width: 400px;
-        height: 700px;
-    }
 }
